--- a/index.html
+++ b/index.html
@@ -128,6 +128,29 @@
               </div>
             </div>
           </fieldset>
+
+          <fieldset class="enroll-options">
+            <legend>Opções de matrícula</legend>
+
+            <div class="input-wrapper">
+              <label>Selecione o turno de estudo</label>
+              <div class="radio-wrapper">
+                <div class="radio-inner">
+                  <div class="radio-image"></div>
+                  <input type="radio" name="study-shift" value="morning" id="morning">
+                  <img src="assets/icons/sun-cloud-02.svg" alt="Ícone de sol">
+                  <label for="morning">Manhã</label>
+                </div>
+
+                <div class="radio-inner">
+                  <div class="radio-image"></div>
+                  <input type="radio" name="study-shift" value="afternoon" id="afternoon">
+                  <img src="assets/icons/sun-02.svg" alt="Ícone de sol">
+                  <label for="afternoon">Manhã</label>
+                </div>
+              </div>
+            </div>
+          </fieldset>
         </form>
       </div>
     </main>
