--- a/index.html
+++ b/index.html
@@ -150,7 +150,71 @@
                 </div>
               </div>
             </div>
+
+            <div class="input-wrapper">
+              <label>Em qual esporte você gostaria de inscrever seu filho?</label>
+              <div class="radio-wrapper">
+                <div class="radio-inner">
+                  <div class="radio-image"></div>
+                  <input type="radio" name="sport" id="football">
+                  <img src="assets/icons/football.svg" alt="Ícone de futebol">
+                  <label for="footbal">Futebol</label>
+                </div>
+
+                <div class="radio-inner">
+                  <div class="radio-image"></div>
+                  <input type="radio" name="sport" id="basketball">
+                  <img src="assets/icons/basketball-02.svg" alt="Ícone de Basquete">
+                  <label for="footbal">Basquete</label>
+                </div>
+
+                <div class="radio-inner">
+                  <div class="radio-image"></div>
+                  <input type="radio" name="sport" id="swimming">
+                  <img src="assets/icons/swimming.svg" alt="Ícone de Natação">
+                  <label for="footbal">Natação</label>
+                </div>
+
+                <div class="radio-inner">
+                  <div class="radio-image"></div>
+                  <input type="radio" name="sport" id="yoga">
+                  <img src="assets/icons/yoga-02.svg" alt="Ícone de Yoga">
+                  <label for="footbal">Yoga</label>
+                </div>
+
+                <div class="radio-inner">
+                  <div class="radio-image"></div>
+                  <input type="radio" name="sport" id="volleyball">
+                  <img src="assets/icons/volleyball.svg" alt="Ícone de Vôlei">
+                  <label for="footbal">Vôlei</label>
+                </div>
+
+                <div class="radio-inner">
+                  <div class="radio-image"></div>
+                  <input type="radio" name="sport" id="boxing">
+                  <img src="assets/icons/boxing-glove-01.svg" alt="Ícone de Boxe">
+                  <label for="footbal">Boxe</label>
+                </div>
+              </div>
+            </div>
           </fieldset>
+
+          <div class="terms-wrapper input-wrapper checkbox-wrapper">
+            <div class="checkbox-image"></div>
+              <input type="checkbox" name="terms" id="terms">
+              <label for="terms">
+                Declaro que li e concordo com os <strong>Termos e Condições</strong> e com a <strong>Política de Privacidade</strong> da escola Estrelas do Amanhã.
+              </label>
+          </div>
+
+          <div class="actions-wrapper">
+            <button class="btn-secondary" type="button">
+              Salvar respostas
+            </button>
+            <button class="btn-primary" type="submit">
+              Fazer matrícula
+            </button>
+          </div>
         </form>
       </div>
     </main>
